# codemux

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  WEB_UI.md  connect_client.py  debug_sessions.py  demo_web_ui_only.py  pyproject.toml  start_codemux.py
.github/workflows/: ci.yml
docs/: e2e-testing-guide.md  end-to-end-verification.md  first-commit-plan-revised.md  first-commit-plan.md  plan.md  type-checker-comparison.md  user-cases.md
examples/: client_server_demo.py
scripts/: benchmark_test.py  debug_detection.py  debug_paths.py  demo_web_ui.py  e2e_interactive_test.py  stress_test.py  test_cli.py  test_discovery.py  test_real_commands.py
src/codemux/: __init__.py  cli.py  client.py  command_router.py  output_processor.py  protocol.py  server.py  server_cli.py  tmux_controller.py  types.py  web_server.py
src/codemux/web/static/css/: dashboard.css
src/codemux/web/static/js/: dashboard.js
src/codemux/web/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_command_router.py  test_protocol.py  test_server.py  test_tmux_controller.py
typings/websockets/: __init__.pyi
typings/websockets/asyncio/: client.pyi  server.pyi
